fixed/improved layouts, improved endpoints performance, new endpoints dedicated to simulations actions
